--- a/front/views/index.ejs
+++ b/front/views/index.ejs
@@ -1,23 +1,12 @@
-<!DOCTYPE html>
-<html lang="en" class="hv-100 h-100">
+<%- include('partials/header') %>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-</head>
-
-<body class="h-100 d-flex align-items-center justify-content-center">
     <div id="content" class="w-50 h-100 p-3" style="background-color: #eee;">
         <p class="js-title text-center h1"></p>
 
         <div class="row justify-content-center mt-5">
             <div class="col-md-6">
                 <h2 class="text-center">Login</h2>
-                <form id="loginForm" action="/users/login" onsubmit="onSubmitLoginRegisterForm(this, event)"
-                    autocomplete="off">
+                <form id="loginForm" action="/users/login" onsubmit="onSubmitForm(this, event)" autocomplete="off">
                     <div class="mb-3">
                         <input type="username" class="form-control" name="username" aria-describedby="usernameHelp"
                             placeholder="Enter your username" required>
@@ -35,7 +24,7 @@
         <div class="row justify-content-center mt-5">
             <div class="col-md-6">
                 <h2 class="text-center">Registration</h2>
-                <form id="registrationForm" action="/users/register" onsubmit="onSubmitLoginRegisterForm(this, event)"
+                <form id="registrationForm" action="/users/register" onsubmit="onSubmitForm(this, event)"
                     autocomplete="off">
                     <div class="mb-3">
                         <input type="username" class="form-control" name="username" aria-describedby="usernameHelp"
@@ -52,16 +41,4 @@
         </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-    <script src="script.js"></script>
-</body>
-
-</html>
+<%- include('partials/footer') %>
